--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 		"p2": "LayoutRandom"
 	},
 	"play" : {
-		"p1": "PlayRandomAndHomeIn",
-		"p2": "PlayRandomAndHomeIn"
+		"p1": "PlayRandom",
+		"p2": "PlayRandom"
 	}
 }
